[package]
name = "addressr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
glob = "0.3"
indicatif = "0.17"
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
